Make the z-index of main-content lower than that of the fixed position header, because we want the main content to look as if it is going UNDER the header, not over top of it.

--- a/assets-35/less/bigfont-header.less
+++ b/assets-35/less/bigfont-header.less
@@ -10,6 +10,7 @@ header#header-content
 	}	
 	hgroup
 	{
+        z-index:1;
 		padding:0;
 		#gradient > .vertical(@navbarBackgroundHighlight, @navbarBackground);		
 		border: 1px solid @navbarBorder;
